fix: 41 - prevent form layout shift during input typing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 .error {
-  min-height: 0.7rem;
+  min-height: 1.2rem;
   color: var(--color-red-500);
   font-weight: var(--font-weight-bold);
   font-size: 0.7rem;
